# Full-Stack-Application

./: main.py
backend/: .env  database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  models.py  prompts.py  story_generator.py
backend/database/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
backend/scripts/: migrate_add_error_column.py  migrate_add_story_created_at.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css  util.js
frontend/src/components/: LoadingStatus.jsx  ThemeInput.jsx
myenv/Scripts/: activate  activate.bat
